--- a/src/Moongate.Server/Moongate.Server.csproj
+++ b/src/Moongate.Server/Moongate.Server.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -23,13 +23,13 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Moongate.Core.Persistence\Moongate.Core.Persistence.csproj" />
-        <ProjectReference Include="..\Moongate.Core.Server\Moongate.Core.Server.csproj"/>
-        <ProjectReference Include="..\Moongate.Core\Moongate.Core.csproj"/>
+        <ProjectReference Include="..\Moongate.Core.Server\Moongate.Core.Server.csproj" />
+        <ProjectReference Include="..\Moongate.Core\Moongate.Core.csproj" />
         <ProjectReference Include="..\Moongate.UO\Moongate.UO.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <TrimmerRootDescriptor Include="ILLink.Descriptors.xml"/>
+        <TrimmerRootDescriptor Include="ILLink.Descriptors.xml" />
     </ItemGroup>
 
     <ItemGroup>
@@ -37,7 +37,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Jint" Version="4.2.2"/>
+        <PackageReference Include="Jint" Version="4.2.2" />
 
         <PackageReference Include="GitInfo" Version="3.5.0">
             <PrivateAssets>all</PrivateAssets>
@@ -48,8 +48,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="Assets\**\*"/>
-        <EmbeddedResource Include="Assets\**\*"/>
+        <None Remove="Assets\**\*" />
+        <EmbeddedResource Include="Assets\**\*" />
     </ItemGroup>
 
 </Project>
